MCDocument/mcdocParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from MCDocument/mcdoc.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class mcdocParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, Any=69, StringValue=70, DocFilePath=71, FieldValue=72, 
		QuestionMark=73, ColonMark=74, Integer=75, VersionString=76, DispatcherKeyString=77, 
		DispatcherValue=78, Number=79, NumberRange=80, Comma=81, BlankString=82;
	public const int
		RULE_arrayElementCount = 0, RULE_arrayValueRange = 1, RULE_summary = 2, 
		RULE_fieldValue = 3, RULE_tupleType = 4, RULE_unknownKey = 5, RULE_unknownValue = 6, 
		RULE_unknownResource = 7, RULE_primitiveArrayType = 8, RULE_dataType = 9, 
		RULE_canonical = 10, RULE_color = 11, RULE_commandSlashOptions = 12, RULE_commandMacroOptions = 13, 
		RULE_commandEmptyOptions = 14, RULE_commandMaxLength = 15, RULE_commandParameters = 16, 
		RULE_command = 17, RULE_deprecated = 18, RULE_dispatcher_key = 19, RULE_divisible_by = 20, 
		RULE_entityAmount = 21, RULE_entityType = 22, RULE_entityParameters = 23, 
		RULE_entity = 24, RULE_gameRuleParameter = 25, RULE_game_rule = 26, RULE_idRegistry = 27, 
		RULE_idTags = 28, RULE_idParameters = 29, RULE_id = 30, RULE_match_regex = 31, 
		RULE_nbt = 32, RULE_nbt_path = 33, RULE_objective = 34, RULE_regex_pattern = 35, 
		RULE_score_holder = 36, RULE_since = 37, RULE_until = 38, RULE_tag = 39, 
		RULE_team = 40, RULE_text_component = 41, RULE_uuid = 42, RULE_usefilePath = 43, 
		RULE_useSentence = 44, RULE_attributes = 45, RULE_dispatchSentence = 46, 
		RULE_fields = 47, RULE_structReference = 48, RULE_structName = 49, RULE_structOpenBracket = 50, 
		RULE_structCloseBracket = 51, RULE_superInvoke = 52, RULE_structContent = 53, 
		RULE_structSentence = 54;
	public static readonly string[] ruleNames = {
		"arrayElementCount", "arrayValueRange", "summary", "fieldValue", "tupleType", 
		"unknownKey", "unknownValue", "unknownResource", "primitiveArrayType", 
		"dataType", "canonical", "color", "commandSlashOptions", "commandMacroOptions", 
		"commandEmptyOptions", "commandMaxLength", "commandParameters", "command", 
		"deprecated", "dispatcher_key", "divisible_by", "entityAmount", "entityType", 
		"entityParameters", "entity", "gameRuleParameter", "game_rule", "idRegistry", 
		"idTags", "idParameters", "id", "match_regex", "nbt", "nbt_path", "objective", 
		"regex_pattern", "score_holder", "since", "until", "tag", "team", "text_component", 
		"uuid", "usefilePath", "useSentence", "attributes", "dispatchSentence", 
		"fields", "structReference", "structName", "structOpenBracket", "structCloseBracket", 
		"superInvoke", "structContent", "structSentence"
	};

	private static readonly string[] _LiteralNames = {
		null, "'# '", "'#'", "'//'", "'('", "'|'", "')'", "'#['", "'='", "']'", 
		"'string'", "'bool'", "'short'", "'int'", "'float'", "'double'", "'long'", 
		"'[]'", "'#[canonical]'", "'#[color='", "'slash='", "'macro='", "'empty='", 
		"'max_length='", "'#[command('", "'#[deprecated='", "'#[dispatcher_key='", 
		"'#[divisible_by='", "'amount='", "'multiple'", "'single'", "'type='", 
		"'entities'", "'players'", "'#[entity('", "'\"boolean\"'", "'\"int\"'", 
		"'#[game_rule('", "')]'", "'registry='", "'tags='", "'allowed'", "'implicit'", 
		"'required'", "'#[id('", "')] string'", "'#[match_regex=\"'", "'\"]'", 
		"'#[nbt=ItemStack]'", "'#[nbt_path]'", "'#[objective]'", "'#[regex_pattern]'", 
		"'#[score_holder]'", "'#[since=\"'", "'#[until=\"'", "'#[tag]'", "'#[team]'", 
		"'#[text_component]'", "'#[uuid]'", "'::'", "'super::'", "'use'", "'dispatch'", 
		"'to'", "'...'", "'{'", "'}'", "'...super::'", "'struct'", null, null, 
		null, null, "'?'", "':'", null, null, null, null, null, null, "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "Any", "StringValue", 
		"DocFilePath", "FieldValue", "QuestionMark", "ColonMark", "Integer", "VersionString", 
		"DispatcherKeyString", "DispatcherValue", "Number", "NumberRange", "Comma", 
		"BlankString"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "mcdoc.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static mcdocParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public mcdocParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public mcdocParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ArrayElementCountContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Integer() { return GetToken(mcdocParser.Integer, 0); }
		public ArrayElementCountContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arrayElementCount; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.EnterArrayElementCount(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.ExitArrayElementCount(this);
		}
	}

	[RuleVersion(0)]
	public ArrayElementCountContext arrayElementCount() {
		ArrayElementCountContext _localctx = new ArrayElementCountContext(Context, State);
		EnterRule(_localctx, 0, RULE_arrayElementCount);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110;
			Match(T__0);
			State = 111;
			Match(Integer);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArrayValueRangeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NumberRange() { return GetToken(mcdocParser.NumberRange, 0); }
		public ArrayValueRangeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arrayValueRange; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.EnterArrayValueRange(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.ExitArrayValueRange(this);
		}
	}

	[RuleVersion(0)]
	public ArrayValueRangeContext arrayValueRange() {
		ArrayValueRangeContext _localctx = new ArrayValueRangeContext(Context, State);
		EnterRule(_localctx, 2, RULE_arrayValueRange);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113;
			Match(T__1);
			State = 114;
			Match(NumberRange);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SummaryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Any() { return GetToken(mcdocParser.Any, 0); }
		public SummaryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_summary; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.EnterSummary(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.ExitSummary(this);
		}
	}

	[RuleVersion(0)]
	public SummaryContext summary() {
		SummaryContext _localctx = new SummaryContext(Context, State);
		EnterRule(_localctx, 4, RULE_summary);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116;
			Match(T__2);
			State = 117;
			Match(Any);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FieldValueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FieldValue() { return GetToken(mcdocParser.FieldValue, 0); }
		public FieldValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fieldValue; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.EnterFieldValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.ExitFieldValue(this);
		}
	}

	[RuleVersion(0)]
	public FieldValueContext fieldValue() {
		FieldValueContext _localctx = new FieldValueContext(Context, State);
		EnterRule(_localctx, 6, RULE_fieldValue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119;
			Match(FieldValue);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TupleTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DataTypeContext[] dataType() {
			return GetRuleContexts<DataTypeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DataTypeContext dataType(int i) {
			return GetRuleContext<DataTypeContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AttributesContext[] attributes() {
			return GetRuleContexts<AttributesContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public AttributesContext attributes(int i) {
			return GetRuleContext<AttributesContext>(i);
		}
		public TupleTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tupleType; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.EnterTupleType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.ExitTupleType(this);
		}
	}

	[RuleVersion(0)]
	public TupleTypeContext tupleType() {
		TupleTypeContext _localctx = new TupleTypeContext(Context, State);
		EnterRule(_localctx, 8, RULE_tupleType);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 121;
			Match(T__3);
			State = 124;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__3:
			case T__6:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
				{
				State = 122;
				dataType();
				}
				break;
			case T__17:
			case T__18:
			case T__23:
			case T__24:
			case T__25:
			case T__26:
			case T__33:
			case T__43:
			case T__47:
			case T__48:
			case T__49:
			case T__50:
			case T__51:
			case T__52:
			case T__53:
			case T__54:
			case T__55:
			case T__56:
			case T__57:
			case FieldValue:
				{
				State = 123;
				attributes();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 126;
			Match(T__4);
			State = 133;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 129;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case T__3:
				case T__6:
				case T__9:
				case T__10:
				case T__11:
				case T__12:
				case T__13:
				case T__14:
				case T__15:
					{
					State = 127;
					dataType();
					}
					break;
				case T__17:
				case T__18:
				case T__23:
				case T__24:
				case T__25:
				case T__26:
				case T__33:
				case T__43:
				case T__47:
				case T__48:
				case T__49:
				case T__50:
				case T__51:
				case T__52:
				case T__53:
				case T__54:
				case T__55:
				case T__56:
				case T__57:
				case FieldValue:
					{
					State = 128;
					attributes();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 131;
				Match(T__4);
				}
				}
				State = 135;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 576196886945201296L) != 0) || _la==FieldValue );
			State = 137;
			Match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnknownKeyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FieldValue() { return GetToken(mcdocParser.FieldValue, 0); }
		public UnknownKeyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unknownKey; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.EnterUnknownKey(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.ExitUnknownKey(this);
		}
	}

	[RuleVersion(0)]
	public UnknownKeyContext unknownKey() {
		UnknownKeyContext _localctx = new UnknownKeyContext(Context, State);
		EnterRule(_localctx, 10, RULE_unknownKey);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139;
			Match(FieldValue);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnknownValueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FieldValue() { return GetToken(mcdocParser.FieldValue, 0); }
		public UnknownValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unknownValue; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.EnterUnknownValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.ExitUnknownValue(this);
		}
	}

	[RuleVersion(0)]
	public UnknownValueContext unknownValue() {
		UnknownValueContext _localctx = new UnknownValueContext(Context, State);
		EnterRule(_localctx, 12, RULE_unknownValue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 141;
			Match(FieldValue);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnknownResourceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public UnknownKeyContext unknownKey() {
			return GetRuleContext<UnknownKeyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UnknownValueContext unknownValue() {
			return GetRuleContext<UnknownValueContext>(0);
		}
		public UnknownResourceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unknownResource; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.EnterUnknownResource(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.ExitUnknownResource(this);
		}
	}

	[RuleVersion(0)]
	public UnknownResourceContext unknownResource() {
		UnknownResourceContext _localctx = new UnknownResourceContext(Context, State);
		EnterRule(_localctx, 14, RULE_unknownResource);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 143;
			Match(T__6);
			State = 144;
			unknownKey();
			State = 145;
			Match(T__7);
			State = 146;
			unknownValue();
			State = 147;
			Match(T__8);
			State = 148;
			Match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrimitiveArrayTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ArrayValueRangeContext arrayValueRange() {
			return GetRuleContext<ArrayValueRangeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArrayElementCountContext arrayElementCount() {
			return GetRuleContext<ArrayElementCountContext>(0);
		}
		public PrimitiveArrayTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_primitiveArrayType; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.EnterPrimitiveArrayType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.ExitPrimitiveArrayType(this);
		}
	}

	[RuleVersion(0)]
	public PrimitiveArrayTypeContext primitiveArrayType() {
		PrimitiveArrayTypeContext _localctx = new PrimitiveArrayTypeContext(Context, State);
		EnterRule(_localctx, 16, RULE_primitiveArrayType);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 150;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 129024L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 152;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__1) {
				{
				State = 151;
				arrayValueRange();
				}
			}

			State = 154;
			Match(T__16);
			State = 156;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__0) {
				{
				State = 155;
				arrayElementCount();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DataTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PrimitiveArrayTypeContext primitiveArrayType() {
			return GetRuleContext<PrimitiveArrayTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TupleTypeContext tupleType() {
			return GetRuleContext<TupleTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UnknownResourceContext unknownResource() {
			return GetRuleContext<UnknownResourceContext>(0);
		}
		public DataTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dataType; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.EnterDataType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.ExitDataType(this);
		}
	}

	[RuleVersion(0)]
	public DataTypeContext dataType() {
		DataTypeContext _localctx = new DataTypeContext(Context, State);
		EnterRule(_localctx, 18, RULE_dataType);
		try {
			State = 162;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__14:
			case T__15:
				EnterOuterAlt(_localctx, 1);
				{
				State = 158;
				primitiveArrayType();
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 2);
				{
				State = 159;
				tupleType();
				}
				break;
			case T__6:
				EnterOuterAlt(_localctx, 3);
				{
				State = 160;
				unknownResource();
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 4);
				{
				State = 161;
				Match(T__9);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CanonicalContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DataTypeContext dataType() {
			return GetRuleContext<DataTypeContext>(0);
		}
		public CanonicalContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_canonical; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.EnterCanonical(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.ExitCanonical(this);
		}
	}

	[RuleVersion(0)]
	public CanonicalContext canonical() {
		CanonicalContext _localctx = new CanonicalContext(Context, State);
		EnterRule(_localctx, 20, RULE_canonical);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 164;
			Match(T__17);
			State = 165;
			dataType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ColorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode StringValue() { return GetToken(mcdocParser.StringValue, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DataTypeContext dataType() {
			return GetRuleContext<DataTypeContext>(0);
		}
		public ColorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_color; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.EnterColor(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ImcdocListener typedListener = listener as ImcdocListener;
			if (typedListener != null) typedListener.ExitColor(this);
		}
	}

	[RuleVersion(0)]
	public ColorContext color() {
		ColorContext _localctx = new ColorContext(Context, State);
		EnterRule(_localctx, 22, RULE_color);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 167;
			Match(T__18);
			State = 168;
			Match(StringValue);
			State = 169;
			Match(T__8);
			State = 170;
			dataType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
